# data_fetcher

./: .gitignore  README.md  REFACTORING_SUMMARY.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/actions/install_deps/: action.yml
.github/workflows/: ci.yml  ci_jp.yml  test.yml
data/: jp_ticker_themes.csv  jp_tickers.csv  news  rss.xlsx  us_tickers.csv
data/cftc/com_fin_txt_2010/: FinComYY.txt
data/cftc/com_fin_txt_2011/: FinComYY.txt
data/cftc/com_fin_txt_2012/: FinComYY.txt
data/cftc/com_fin_txt_2013/: FinComYY.txt
data/cftc/com_fin_txt_2014/: FinComYY.txt
data/cftc/com_fin_txt_2015/: FinComYY.txt
data/cftc/com_fin_txt_2016/: FinComYY.txt
data/cftc/com_fin_txt_2017/: FinComYY.txt
data/cftc/com_fin_txt_2018/: FinComYY.txt
data/cftc/com_fin_txt_2019/: FinComYY.txt
data/cftc/com_fin_txt_2020/: FinComYY.txt
data/cftc/com_fin_txt_2021/: FinComYY.txt
data/edinet/: 13010.csv  130A0.csv  13320.csv  13330.csv  135A0.csv  13750.csv  13760.csv  13770.csv  13790.csv  137A0.csv  13800.csv  13810.csv  13820.csv  13830.csv  13840.csv  14000.csv  14010.csv  14070.csv  14140.csv  14170.csv  14180.csv  14190.csv  141A0.csv  14200.csv  14290.csv  142A0.csv  14300.csv  14310.csv  14330.csv  14340.csv  14350.csv  14360.csv  143A0.csv  14430.csv  14440.csv  14460.csv  14470.csv  14490.csv  14500.csv  145A0.csv  (+4826 more)
data/jp_ticker_themes/: 20260606.csv  20260607.csv  20260609.csv  20260611.csv  20260615.csv  20260620.csv  20260623.csv  20260625.csv  20260626.csv  20260708.csv  20260710.csv  20260720.csv
data/tdnet/: 1e_ElementList.xlsx  1f_AccountList.xlsx  1g_IFRS_ElementList.xlsx  koumoku_list_CG.xls  koumoku_list_Quarterly_Financial_Statements_20250131.xlsx  項目リスト_REIT.xls  項目リスト_事業会社.xlsx
data_fetcher/: __init__.py  base_fetcher.py  constants.py  debug.py  fetcher.py  logging.py  notification.py  session.py  ticker_list.py  volume_bar.py
data_fetcher/binance/: __init__.py  binance_fetcher.py
data_fetcher/bitflyer/: __init__.py  bitflyer_fetcher.py
data_fetcher/edinet/: __init__.py  api.py
data_fetcher/gmo/: __init__.py  gmo_fetcher.py  volume_bar.py
data_fetcher/histdata/: __init__.py  histadata_fetcher.py  histdata_fetcher.py
data_fetcher/kabutan/: __init__.py  catalyst.py  data.py  financial.py  io.py  kabutan_fetcher.py  util.py
data_fetcher/rakuten/: __init__.py  rakuten_fetcher.py
data_fetcher/server/: __init__.py
data_fetcher/tdnet/: __init__.py  constants.py  convert.py  excel.py  preprocess.py
data_fetcher/utils/: __init__.py  market.py  market_capital.py
data_fetcher/yfinance/: __init__.py
docker/: docker-compose.yml
scripts/: cron_fetch_from_binance.sh  cron_fetch_from_edinet.sh  cron_fetch_from_gcp.sh  cron_fetch_from_gmo.sh  cron_fetch_from_histdata.sh  cron_fetch_from_kabutan_news.sh  cron_fetch_from_rss.sh  cron_fetch_from_sbi.sh  cron_fetch_from_tdnet.sh  cron_fetch_from_yf.sh  cron_notify_to_line.sh  divide_stocks_jp.py  fetch_data_from_binance.py  fetch_data_from_bitflyer.py  fetch_data_from_bitflyer_book.py  fetch_data_from_edinet.py  fetch_data_from_forex_factory.py  fetch_data_from_gmo.py  fetch_data_from_histdata.py  fetch_data_from_kabutan.py  fetch_data_from_rss.py  fetch_data_from_sbi.py  fetch_data_from_tdnet.py  fetch_data_from_yf.py  fetch_jp_news.py  google_oauth_authentication.py  notify_to_line.py  run_crypto_fetchers.sh  run_powerautomate.bat  run_powerautomate.ps1  run_powerautomate.py  server.py  update_financial_data.py  update_financial_data_jp.py  update_jp_tickers_list.py
src/data_fetcher/: ARCHITECTURE.md  __init__.py  base_fetcher.py  base_reader.py  constants.py  debug.py  fetcher.py  logging.py  notification.py  session.py  ticker_list.py  volume_bar.py
tests/: __init__.py  test_base_fetcher.py  test_fetch_jp_news_e2e.py  test_fetcher.py  test_kabu_tick_reader.py  test_notification.py  test_session.py  test_volume_bar.py
(+22694 files in other folders)
