[project]
name = "data-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arelle-release>=2.37.37",
    "fastapi>=0.116.1",
    "fastexcel>=0.14.0",
    "histdata>=1.1",
    "ixbrlparse>=0.10.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "requests-html>=0.10.0",
    "requests-ratelimiter>=0.7.0",
    "selenium>=4.35.0",
    "uiautomation>=2.0.28",
    "websocket-client>=1.8.0",
    "xlrd>=2.0.2",
    "xlwings>=0.33.15",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "epc>=0.0.5",
    "orjson>=3.11.0",
    "packaging>=25.0",
    "paramiko>=3.5.1",
    "pytest>=8.0.0",
    "rapidfuzz>=3.13.0",
    "ruff>=0.12.4",
    "setuptools>=80.9.0",
    "sexpdata>=1.0.2",
    "six>=1.17.0",
    "watchdog>=6.0.0",
]
